// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BodyCopy /> renders base component correctly 1`] = `
<article
  className="base dark undefined"
  id="Anti-Oxidant"
>
  <header
    className="base"
    id="Anti-Oxidant"
  >
    <h2
      className="base mediumWeightFont xXSmall dark eyebrow"
    >
      Recommended Nearby
    </h2>
    <h3
      className="base xLarge dark heading"
    >
      Aesop & The Paris Review: A Partnership Extended
    </h3>
    <h4
      className="base mediumWeightFont xSmall dark subHeading"
    >
      Active Nutrients
    </h4>
  </header>
  <div
    className="copy dark"
  >
    Parsley Seed Cream. [The Paris Review](http://theparisreview.org) Intensely soothing, nourishing and hydrating, this elegant formulation contains a potent blend of botanicals that offer fortification of the highest order against free radicals.
  </div>
  <div
    className="base flush"
  />
</article>
`;

exports[`<BodyCopy /> renders promary title as an \`h2\` if no \`eyebrow\` or \`primaryTitle\` prop are passed 1`] = `
<article
  className="base dark undefined"
>
  <header
    className="base"
  >
    <h2
      className="base mediumWeightFont xSmall dark subHeading"
    >
      Aesop & The Paris Review: A Partnership Extended
    </h2>
  </header>
  <div
    className="base flush"
  />
</article>
`;

exports[`<BodyCopy /> renders promary title as an \`h2\` if no \`eyebrow\` prop is passed 1`] = `
<article
  className="base dark undefined"
>
  <header
    className="base"
  >
    <h2
      className="base xLarge dark heading"
    >
      Aesop & The Paris Review: A Partnership Extended
    </h2>
  </header>
  <div
    className="base flush"
  />
</article>
`;
